--- a/Flappy_bird/Flappy_bird.csproj
+++ b/Flappy_bird/Flappy_bird.csproj
@@ -92,5 +92,8 @@
   <ItemGroup>
     <None Include="Resources\Ground.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Ground1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
