--- a/Flappy_bird/Flappy_bird.csproj
+++ b/Flappy_bird/Flappy_bird.csproj
@@ -95,5 +95,11 @@
   <ItemGroup>
     <None Include="Resources\Ground1.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Знімок екрана 2023-10-29 195531-PhotoRoom.png-PhotoRoom.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\OIP %286%29-PhotoRoom.png-PhotoRoom.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
